# golden-llm-mind

./: .gitignore  README.md
game/: episode_parser.py  google_players.py  model.py  openai_players.py  play.py  pyproject.toml  validate_show.py
results/: 2023-05-29-bison-text.txt  2023-05-29-gpt-3.5.txt  2023-05-29-gpt-4.txt  2023-09-22-gpt-3.5.txt  2023-09-22-gpt-4.txt  2023-10-28-bison-text.txt  2023-10-28-gpt-3.5.txt  2023-10-28-gpt-4.txt  bison-text.txt  gpt-3.5.txt  gpt-4.txt  results.md
shows/: 2023-05-29.txt  2023-09-22.txt  2023-10-28.txt
transcription/: README.md  pyproject.toml
transcription/transcription/: __main__.py  download.py  transcribe.py
