[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Donatas Remeika <donatas.remeika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.327"
openai = "^0.28.1"
google-cloud-aiplatform = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
